# ventreo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Vagrantfile  manage.py  pyproject.toml  pytest.ini  requirements.txt  site_bootstrap.py  sitecustomize.py
.devcontainer/: devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
access_control/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
access_control/migrations/: 0001_initial.py
audit/: __init__.py  apps.py  models.py  serializers.py  services.py
authentication/: __init__.py  apps.py  permissions.py
callcenter_site/: __init__.py  asgi.py  settings.py  wsgi.py
callcentersite/: asgi.py  settings.py  urls.py  wsgi.py
dashboards/: __init__.py  apps.py  configs.py  models.py  serializers.py  urls.py
dashboards/migrations/: 0001_initial.py
docs/: GUIA_DESARROLLO_PROFESIONAL.md  data_flow_pipeline.md  use_cases.md
docs/security/: securityrat.md
docs/use_cases/: UC-001-validar-acceso-rbac.md  UC-002-gestionar-inversion.md  UC-003-ajustar-presupuesto-operativo.md  UC-004-actualizar-modelo-ingresos.md  UC-005-monitorear-cashflow-alertas.md  UC-006-cumplir-obligaciones-fiscales.md  UC-007-gestionar-escenarios.md  UC-008-consultar-dashboards-persona.md  UC-009-configurar-parametros-maestros.md  UC-010-seleccionar-bundle-roles.md  UC-011-revisar-matriz-permisos.md  UC-012-consultar-fases-pipeline.md  UC-013-supervisar-reglas-alerta.md  UC-014-configurar-canales-alerta.md  UC-015-monitorear-bitacora-auditoria.md  UC-016-catalogar-roles-rbac.md  UC-017-consolidar-roles-multifuente.md  UC-018-identificar-rol-maximo.md  UC-019-calcular-permisos-hoja.md  UC-020-derivar-destinatarios-alertas.md  UC-021-auditar-reglas-por-rol.md  UC-022-operar-bitacora-in-memory.md
finance/: __init__.py  apps.py  domain.py  models.py  serializers.py
finance/migrations/: 0001_initial.py
identity/: __init__.py  apps.py  domain.py  serializers.py  views.py
identity/migrations/: 0001_initial.py
modules/: __init__.py
modules/access_control/: __init__.py  apps.py  models.py  serializers.py  services.py
modules/audit/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
modules/dashboards/: __init__.py  apps.py  configs.py  models.py  serializers.py  views.py
modules/finance/: __init__.py  apps.py  domain.py  models.py  serializers.py  urls.py  views.py
modules/identity/: __init__.py  apps.py  models.py  services.py  urls.py
modules/notifications/: __init__.py  apps.py  models.py  serializers.py  services.py  views.py
notifications/: __init__.py  apps.py  models.py  serializers.py  urls.py
notifications/migrations/: 0001_initial.py
scripts/: check_no_emojis.py  provision_vagrant.sh  run_ci.sh
site/: asgi.py  settings.py  urls.py  wsgi.py
tests/: README.md  conftest.py  test_check_no_emojis.py
(+10 files in other folders)
