[tool.black]
line-length = 88
target-version = ["py311"]
include = "\\.pyi?$"
exclude = """
/(\.venv|venv|build|dist|.git|.mypy_cache|__pycache__)/
"""

[tool.isort]
profile = "black"
line_length = 88
known_first_party = []
skip = ["venv", ".venv", "build", "dist"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", "venv", ".venv"]
max-complexity = 10

[tool.bandit]
targets = ["."]
exclude = ["tests", "venv", ".venv", "build", "dist"]
skips = ["B101"]

[project]
name = "ventreo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []
