[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ventreo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
        "Django>=4.2,<5",
        "django-cors-headers>=4.3",
        "django-environ>=0.11",
        "django-extensions>=3.2",
        "django-ratelimit>=4.1",
        "django-user-agents>=0.4",
        "djangorestframework>=3.14",
        "djangorestframework-simplejwt>=5.3",
        "drf-spectacular>=0.27",
        "gunicorn>=21",
        "psycopg2-binary>=2.9",
        "django-filter>=23.5"
    ]


[tool.black]
line-length = 88
target-version = ["py311"]
include = "\\.pyi?$"
extend-exclude = """
/(
    \\.venv
    |venv
    |build
    |dist
    |\\.git
    |\\.mypy_cache
    |__pycache__
)
/"""

[tool.isort]
profile = "black"
line_length = 88
known_first_party = []
skip = ["venv", ".venv", "build", "dist"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["build", "dist", "venv", ".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -p no:django"
pythonpath = ["."]

[tool.bandit]
targets = ["."]
exclude = ["tests", "venv", ".venv", "build", "dist"]
skips = ["B101"]
